tests/algorithms/transpiler/Zig/digital_image_processing/dithering/burkes.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/digital_image_processing/dithering/burkes.zig:80:70: error: array literal requires address-of operator (&) to coerce to slice type '[][]i64'